--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFT LARYON Portfolio</title>
+    <title>LARYON NFT Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="images/logo1.png" alt="NFT LARYON Logo">
-                <span style="color: #1E3F5A; font-size: 1.2rem;">NFT LARYON</span>
+                <img src="images/logo1.png" alt="LARYON NFT Logo">
+                <span style="color: #1E3F5A; font-size: 1.2rem;">LARYON NFT</span>
             </div>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/havvanur-bozkurt-020510hb/" >Linkedin</a>
+                <a href="https://www.linkedin.com/in/havvanur-bozkurt-020510hb/">Linkedin</a>
                 <a href="https://github.com/havvabzkrtt" >Github</a>
             </div>
         </nav>
@@ -75,7 +75,7 @@
 
     <footer style="color: #1E3F5A; font-size: 1.2rem;">
         <div class="footer-content">
-            <span>NFT LARYON</span>
+            <span>LARYON NFT</span>
             <span>&nbsp; &nbsp; | &nbsp; &nbsp;</span>
             <span>CopyRight ©2024 GPT</span>
         </div>
